--- a/geps/templates/dashboard/home.html
+++ b/geps/templates/dashboard/home.html
@@ -8,7 +8,7 @@
         <div class="btn-toolbar justify-content-between" role="toolbar" aria-label="Toolbar with button groups">
             <div class="btn-group" role="group" aria-label="First group">
                 {% if not instituicao %}
-                    <a href="#" class="btn btn-primary">Disponibilidade</a>&nbsp;
+                    <a href="/formDisponivelDocente/" class="btn btn-primary">Disponibilidade</a>&nbsp;
                 {% endif %}
                 {% if instituicao %}
                     <a href="/formPesquisaDocente/" class="btn btn-primary">Pesquisar Docente</a>&nbsp;
